--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/yup": "^0.29.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
-    "mongoose": "^5.10.2"
+    "mongoose": "^5.10.2",
+    "yup": "^0.29.3"
   }
 }
